--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,24 +1,22 @@
-.cards{
+.cards {
   list-style-type: none;
   margin: 0 auto;
   padding: 0;
-  border-bottom:1px solid #21212166;
+  border-bottom: 1px solid #21212166;
 }
 
-.cards__list{
- display:grid;
- grid-template-columns: repeat(auto-fit, minmax(413px, 1fr));
- list-style-type: none;
- justify-content: center;
- padding: 0;
- margin: 10px 0 0 0;
- gap: 30px 20px;
-
-
+.cards__list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 413px);
+  list-style-type: none;
+  justify-content: center;
+  padding: 0;
+  margin: 10px 0 0 0;
+  gap: 30px 20px;
 }
 
-@media screen and (max-width:627px) {
+@media screen and (max-width: 627px) {
   .cards__list {
-    grid-template-columns: repeat(auto-fit,288px);
-}
+    grid-template-columns: repeat(auto-fit, 288px);
+  }
 }
