--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,19 +1,14 @@
-.footer{
-  display:flex;
-  justify-content:center;
-  margin:0;
-
-
+.footer {
+  display: flex;
+  justify-content: center;
+  margin: 0;
 }
 
-p{
-  height:16px;
-  width:105px;
+p {
+  height: 16px;
+  width: 105px;
   font-family: Poppins, sans-serif;
-  font-weight:400;
-  font-size:16px;
-  color:#212121B2;
-
-
-
+  font-weight: 400;
+  font-size: 16px;
+  color: #212121b2;
 }
