--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -9,14 +9,14 @@
   margin: 0 0 12px;
   font-family: Poppins, sans-serif;
   font-weight: 500;
-  font-size:32px;
-  line-height:1;
+  font-size: 32px;
+  line-height: 1;
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  max-width:420px;
+  max-width: 420px;
 }
 
 .profile__description {
@@ -28,7 +28,7 @@
   text-overflow: ellipsis;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  max-width:420px;
+  max-width: 420px;
 }
 .profile__add-btn {
   margin-left: auto;
@@ -45,10 +45,9 @@
   border-style: none;
 }
 
-.profile__add-btn:hover{
-  cursor:pointer;
-  opacity:80%;
-
+.profile__add-btn:hover {
+  cursor: pointer;
+  opacity: 80%;
 }
 
 .profile__avatar {
@@ -73,57 +72,57 @@
   gap: 3px;
 }
 
-.profile__edit-btn:hover{
-  opacity:100%;
-  cursor:pointer;
+.profile__edit-btn:hover {
+  opacity: 100%;
+  cursor: pointer;
 }
 
-@media screen and (max-width:627px){
-  .profile{
-    flex-direction:column;
-    max-width:280px;
-    align-items:center;
-    text-align:center;
-    padding-top:20px;
+@media screen and (max-width: 627px) {
+  .profile {
+    flex-direction: column;
+    max-width: 280px;
+    align-items: center;
+    text-align: center;
+    padding-top: 20px;
   }
 
-  .profile__avatar{
-    margin-right:0;
-    height:80px;
-    width:80px;
-    margin-bottom:12px;
-
+  .profile__avatar {
+    margin-right: 0;
+    height: 80px;
+    width: 80px;
+    margin-bottom: 12px;
   }
 
-  .profile__add-btn{
-    margin:0;
+  .profile__add-btn {
+    margin: 0;
     width: 288px;
     height: 52px;
     opacity: 1;
     padding-top: 18px;
     gap: 8px;
     border-radius: 8px;
-
+    padding:18px 0 ;
+    justify-content: center;
   }
 
-  .profile__name{
-    font-size:20px;
-    margin:0 0 6px;
-    max-width:288px;
+  .profile__name {
+    font-size: 20px;
+    margin: 0 0 6px;
+    max-width: 288px;
   }
 
-  .profile__column{
+  .profile__column {
     margin: 0 0 20px;
   }
 
-  .profile__description{
+  .profile__description {
     margin: 0 0 0 32px;
-    max-width:288px;
+    max-width: 288px;
   }
 
-  .profile__edit-btn{
+  .profile__edit-btn {
     margin: 0 auto;
-    gap:8px;
-    padding-top:32px;
+    gap: 8px;
+    padding-top: 32px;
   }
 }
